updated music-service api
